--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ a{color:inherit;text-decoration:none}
 	width:100%;
 	margin:auto;
 	max-width:525px;
-	min-height:670px;
+	min-height:700px;
 	position:relative;
 	background:url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQFW19rh0L3PcCnzkwTmb2x6KSTQV3MacCKrg&usqp=CAU) no-repeat center;
 	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
@@ -22,7 +22,7 @@ a{color:inherit;text-decoration:none}
 	width:100%;
 	height:100%;
 	position:absolute;
-	padding:90px 70px 50px 70px;
+	padding:30px 70px 50px 70px;
 	background:rgba(40,57,101,.9);
 }
 .login-html .sign-in-htm,
@@ -44,7 +44,7 @@ a{color:inherit;text-decoration:none}
 .login-html .tab,
 .login-form .group .label,
 .login-form .group .button{
-	text-transform:uppercase;
+	text-transform:none;
 }
 .login-html .tab{
 	font-size:22px;
