--- a/css/stats.css
+++ b/css/stats.css
@@ -283,5 +283,73 @@ body {
    font-size: 16px;
  }
 
+ body {
+	font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
+}
 
- 
+.cards-container {
+  display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+  max-width: 1080px;
+  margin: 0 auto;
+}
+
+.card-wrapper {
+  display:flex;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	transition: 0.3s;
+	width: 15%;
+	border-radius: 5px;
+  margin:5px auto;
+	-webkit-animation:scaledown 0.3s linear;
+	-moz-animation:scaledown 0.3s linear;
+	animation:scaledown 0.2s linear;
+	transform-origin:50% 50%;
+	animation-fill-mode: forwards;
+  background-color: white;
+  height: 100px;
+  width:200px;
+}
+
+.card-wrapper:hover {
+	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+	z-index:100;
+	-webkit-animation:scale 0.3s linear;
+	-moz-animation:scale 0.3s linear;
+	animation:scale 0.1s linear;
+	transform-origin:50% 50%;
+	animation-fill-mode: forwards;
+}
+
+.card-image img {
+	border-radius: 5px 0 0 5px;
+  height: 90%;
+  width: 90px;
+  object-fit: cover;
+  padding: 5px;
+}
+
+.card-content h3 {
+  padding-right: 5px;
+  font-size: 1em;
+  
+}
+
+@keyframes scale{
+	0%{
+		transform:scale(1.0);
+  }
+	100%{
+		transform:scale(1.02);
+	}
+}
+
+@keyframes scaledown{
+	0%{
+		transform:scale(1.02);
+	}
+	100%{
+		transform:scale(1.0);
+	}
+}
